--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -41,6 +41,7 @@ $height-header-xl: 150px;
 $z-index-navigation: 10;
 $z-index-notification: 100;
 $z-index-modal: 1000;
+$z-index-fullscreen: 50;
 
 //**********offset
 $offset-basic: 4px;
